FIX: gave z-index back to modal

--- a/src/1.0/modal.css
+++ b/src/1.0/modal.css
@@ -11,6 +11,7 @@
 	align-items: center;
 
 	display: none;
+	z-index: 9998;
 }
 
 .modal:not(.hidden) { display: flex; }
